--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".controller.LoginActivity">
+        tools:context=".gui.LoginActivity">
 
     <TextView
             android:layout_width="wrap_content"
@@ -56,6 +56,7 @@
                 android:weightSum="1">
 
             <android.support.design.button.MaterialButton
+                    android:id="@+id/btn_login"
                     style="@style/Widget.MaterialComponents.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
