imagens de cartão

--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="157dp"
             android:paddingTop="10dp"
-            android:layout_gravity="center" tools:srcCompat="@drawable/ApenasUm" android:visibility="visible"/>
+            android:layout_gravity="center" tools:srcCompat="@drawable/apenas_um" android:visibility="visible"/>
 
             android:visibility="visible" app:srcCompat="@drawable/Apenas Um"/>
     <ListView
